# Shotera

./: .gitignore  README.md  index.html  package-lock.json  package.json  plan.md  premium_features_plan.md  sprint1_summary.md
.github/workflows/: pages.yml  release.yml
src/: App.css  App.tsx  i18n.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: PinnedImage.tsx  ScreenshotCapture.tsx  SettingsWindow.tsx
website/: index.html  script.js  style.css
